--- a/views/vista_main.xml
+++ b/views/vista_main.xml
@@ -1,60 +1,122 @@
 <odoo>
   <data>
-    <!-- explicit list view definition -->
 
-    <record model="ir.ui.view" id="frusec.list">
-      <field name="name">frusec.vista_list</field>
-      <field name="model">frusec</field>
+    <!-- order tree view -->
+
+    <record id="frusec_order_view_tree" model="ir.ui.view">
+      <field name="name">frusec.order.tree</field>
+      <field name="model">frusec.order</field>
       <field name="arch" type="xml">
         <tree>
-          <field name="name"/>
-          <field name="value"/>
-          <field name="value2"/>
+          <field name="order_code"></field>
+          <field name="client"></field>
+          <field name="datetime"></field>
+          <field name="status"></field>
         </tree>
       </field>
     </record>
+    
+    <!-- order calendar view -->
 
+    <record id="frusec_order_view_calendar" model="ir.ui.view">
+      <field name="name">
+        frusec.order.calendar</field>
+      <field name="model">frusec.order</field>
+      <field name="arch" type="xml">
+        <calendar string="" date_start="datetime" color="order_code">
+
+        </calendar>
+      </field>
+    </record>
+
+    <!-- product kanban view -->
+    <record id="frusec_order_view_kanban" model="ir.ui.view">
+      <field name="name">frusec.order.kanban</field>
+      <field name="model">frusec.order</field>
+      <field name="arch" type="xml">
+        <kanban>
+          <templates>
+            <t t-name="kanban-box">
+
+            </t>
+          </templates>
+        </kanban>
+      </field>
+    </record>
+
+
+    <!-- client form view 
+
+    <record id="frusec_order_view_form" model="ir.ui.view">
+      <field name="name">frusec.order.form</field>
+      <field name="model">frusec.order</field>
+      <field name="arch" type="xml">
+        <form string="Client List">
+          <sheet>
+            <group>
+              <field name="name"></field>
+            </group>
+            <group>
+              <field name="phone"></field>
+              <field name="contact"></field>
+              <field name="note"></field>
+            </group>
+          </sheet>
+        </form>
+      </field>
+    </record>
+  -->
 
     <!-- actions opening views on models -->
 
-    <record model="ir.actions.act_window" id="frusec.action_window">
-      <field name="name">main window</field>
-      <field name="res_model">frusec</field>
-      <field name="view_mode">tree,form</field>
-    </record>
-
-
-    <!-- server action to the one above -->
-<!--
-    <record model="ir.actions.server" id="main.action_server">
-      <field name="name">main server</field>
-      <field name="model_id" ref="model_main_main"/>
-      <field name="state">code</field>
-      <field name="code">
-        action = {
-          "type": "ir.actions.act_window",
-          "view_mode": "tree,form",
-          "res_model": model._name,
-        }
+    <record model="ir.actions.act_window" id="order_action_window">
+      <field name="name">Order List</field>
+      <field name="type">ir.actions.act_window</field>
+      <field name="res_model">frusec.order</field>
+      <field name="view_mode">tree,calendar</field>
+      <field name="help" type="html">
+          <p class="o_view_nocontent_smiling_face">
+          Create a new order!
+        </p>
       </field>
     </record>
--->
+
+    <record model="ir.actions.act_window" id="product_action_window">
+      <field name="name">Product List</field>
+      <field name="type">ir.actions.act_window</field>
+      <field name="res_model">frusec.product</field>
+      <field name="view_mode">tree,kanban</field>
+      <field name="help" type="html">
+        <p class="o_view_nocontent_smiling_face">
+          Create a new product!
+        </p>
+      </field>
+    </record>
+
+    <record model="ir.actions.act_window" id="client_action_window">
+      <field name="name">Client List</field>
+      <field name="type">ir.actions.act_window</field>
+      <field name="res_model">frusec.client</field>
+      <field name="view_mode">tree</field>
+      <field name="help" type="html">
+        <p class="o_view_nocontent_smiling_face">
+          Create a new client!
+        </p>
+      </field>
+    </record>
 
     <!-- Top menu item -->
 
-    <menuitem name="Frusec" id="frusec.menu_root" sequence="450"/>
+    <menuitem name="Frusec" id="frusec_root" sequence="0" />
 
     <!-- menu categories -->
 
-    <menuitem name="Menu 1" id="frusec.menu_1" parent="frusec.menu_root" sequence="10"/>
-    <menuitem name="Menu 2" id="frusec.menu_2" parent="frusec.menu_root" sequence="10" />
-
-    <!-- actions -->
-
-    <menuitem name="List" id="frusec.menu_1_list" parent="frusec.menu_1"
-              action="frusec.action_window"/>
-    <menuitem name="List 2" id="frusec.menu_2_list" parent="frusec.menu_2"
-              action="frusec.action_window"/>
+    <menuitem name="Orders" id="frusec_orders" parent="frusec_root" sequence="10"
+      action="order_action_window" />
+    <menuitem name="Products" id="frusec_products" parent="frusec_root" sequence="20"
+      action="product_action_window" />
+    <menuitem name="Clients" id="frusec_clients" parent="frusec_root" sequence="30"
+      action="client_action_window" />
 
   </data>
 </odoo>
