--- a/views/vista_order.xml
+++ b/views/vista_order.xml
@@ -28,7 +28,7 @@
         </calendar>
       </field>
     </record>
-
+    
     <!-- product kanban view -->
     <record id="frusec_order_view_kanban" model="ir.ui.view">
       <field name="name">frusec.order.kanban</field>
@@ -44,28 +44,28 @@
       </field>
     </record>
 
-
-    <!-- client form view 
+    <!-- client form view -->
 
     <record id="frusec_order_view_form" model="ir.ui.view">
-      <field name="name">frusec.order.form</field>
-      <field name="model">frusec.order</field>
+      <field name="name">frusec.client.form</field>
+      <field name="model">frusec.client</field>
       <field name="arch" type="xml">
-        <form string="Client List">
+        <form string='Clients'>
           <sheet>
             <group>
-              <field name="name"></field>
-            </group>
-            <group>
-              <field name="phone"></field>
-              <field name="contact"></field>
-              <field name="note"></field>
+              <group>
+                <field name="name"></field>
+              </group>
+              <group>
+                <field name="phone"></field>
+                <field name="contact"></field>
+                <field name="note"></field>
+              </group>
             </group>
           </sheet>
         </form>
       </field>
     </record>
-  -->
 
     <!-- actions opening views on models -->
 
@@ -97,7 +97,7 @@
       <field name="name">Client List</field>
       <field name="type">ir.actions.act_window</field>
       <field name="res_model">frusec.client</field>
-      <field name="view_mode">tree</field>
+      <field name="view_mode">tree,form</field>
       <field name="help" type="html">
         <p class="o_view_nocontent_smiling_face">
           Create a new client!
