--- a/views/vista_product.xml
+++ b/views/vista_product.xml
@@ -22,7 +22,7 @@
             <field name="name">Product List</field>
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">frusec.product</field>
-            <field name="view_mode">tree,kanban</field>
+            <field name="view_mode">tree,kanban,form</field>
             <field name="help" type="html">
                 <p class="o_view_nocontent_smiling_face">
                     Create a new product!
