--- a/views/vista_order.xml
+++ b/views/vista_order.xml
@@ -56,8 +56,7 @@
     <record model="ir.actions.act_window" id="order_action_window">
       <field name="name">Order List</field>
       <field name="type">ir.actions.act_window</field>
-      <field name="res_model">
-        frusec.order</field>
+      <field name="res_model">frusec.order</field>
       <field name="view_mode">tree,form,calendar</field>
       <field name="help" type="html">
           <p class="o_view_nocontent_smiling_face">
