--- a/views/vista_product.xml
+++ b/views/vista_product.xml
@@ -1,9 +1,28 @@
 <odoo>
     <data>
 
+        <!-- order search view -->
+
+        <record id="frusec_product_view_search" model="ir.ui.view">
+            <field name="name">frusec.product.search</field>
+            <field name="model">frusec.product</field>
+            <field name="arch" type="xml">
+                <search string="Products">
+                    <field name="name" />
+                    <field name="price" />
+                    <field name="note" />
+                    <separator />
+                    <group expand="1" string="Group By">
+                        <filter name="price" string="Price" context="{'group_by': 'price'}" />
+                    </group>
+                </search>
+            </field>
+        </record>
+
         <!-- product kanban view -->
         <record id="frusec_order_view_kanban" model="ir.ui.view">
-            <field name="name">frusec.order.kanban</field>
+            <field name="name">
+                frusec.order.kanban</field>
             <field name="model">frusec.order</field>
             <field name="arch" type="xml">
                 <kanban>
@@ -19,7 +38,8 @@
         <!-- actions opening views on models -->
 
         <record model="ir.actions.act_window" id="product_action_window">
-            <field name="name">Product List</field>
+            <field name="name">Product
+                List</field>
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">frusec.product</field>
             <field name="view_mode">tree,kanban,form</field>
