--- a/views/vista_product.xml
+++ b/views/vista_product.xml
@@ -1,7 +1,7 @@
 <odoo>
     <data>
 
-        <!-- order search view -->
+        <!-- product search view -->
 
         <record id="frusec_product_view_search" model="ir.ui.view">
             <field name="name">frusec.product.search</field>
