--- a/views/vista_client.xml
+++ b/views/vista_client.xml
@@ -20,8 +20,7 @@
         <!-- client form view -->
 
         <record id="frusec_order_view_form" model="ir.ui.view">
-            <field name="name">
-                frusec.client.form</field>
+            <field name="name">frusec.client.form</field>
             <field name="model">frusec.client</field>
             <field name="arch" type="xml">
                 <form string='Clients'>
@@ -44,8 +43,7 @@
         <!-- actions opening views on models -->
 
         <record model="ir.actions.act_window" id="client_action_window">
-            <field name="name">Client
-                List</field>
+            <field name="name">Client List</field>
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">frusec.client</field>
             <field name="view_mode">tree,form</field>
@@ -58,8 +56,7 @@
 
         <!-- menu categories -->
 
-        <menuitem name="Clients" id="frusec_clients" parent="frusec_root" sequence="30"
-            action="client_action_window" />
+        <menuitem name="Clients" id="frusec_clients" parent="frusec_root" sequence="30" action="client_action_window" />
 
     </data>
 </odoo>
