--- a/views/vista_product.xml
+++ b/views/vista_product.xml
@@ -20,6 +20,7 @@
         </record>
 
         <!-- product kanban view -->
+        
         <record id="frusec_product_view_kanban" model="ir.ui.view">
             <field name="name">frusec.product.kanban</field>
             <field name="model">frusec.product</field>
@@ -33,7 +34,7 @@
                     
                     <templates>
                         <t t-name="kanban-box">
-                            <div t-attf-class="oe_kanban_global_click">
+                            <div class="oe_kanban_global_click">
                                 <div class="o_kanban_image">
                                     <img class="o_kanban_image_inner_pic"
                                         t-att-src="kanban_image('frusec.product', 'image', record.id.raw_value)" />
@@ -61,7 +62,7 @@
             <field name="name">Product List</field>
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">frusec.product</field>
-            <field name="view_mode">tree,kanban,form</field>
+            <field name="view_mode">kanban,form</field>
             <field name="help" type="html">
                 <p class="o_view_nocontent_smiling_face">
                     Create a new product!
