--- a/views/vista_product.xml
+++ b/views/vista_product.xml
@@ -19,10 +19,24 @@
             </field>
         </record>
 
+        <!-- product tree view -->
+
+        <record id="frusec_product_view_tree" model="ir.ui.view">
+            <field name="name">frusec.product.tree</field>
+            <field name="model">frusec.product</field>
+            <field name="arch" type="xml">
+                <tree>
+                    <field name="name"></field>
+                    <field name="price" widget="monetary"></field>
+                </tree>
+            </field>
+        </record>
+
         <!-- product kanban view -->
-        
+
         <record id="frusec_product_view_kanban" model="ir.ui.view">
-            <field name="name">frusec.product.kanban</field>
+            <field name="name">
+                frusec.product.kanban</field>
             <field name="model">frusec.product</field>
             <field name="arch" type="xml">
                 <kanban>
@@ -42,10 +56,10 @@
                                 <div class="oe_kanban_details">
                                     <ul>
                                         <li>
-                                            Name: <field name="name" />
+                                            <field name="name" />
                                         </li>
                                         <li>
-                                            Price: <field name="price" />
+                                            <field name="price" widget="monetary"/>
                                         </li>
                                     </ul>
                                 </div>
@@ -59,7 +73,8 @@
         <!-- actions opening views on models -->
 
         <record model="ir.actions.act_window" id="product_action_window">
-            <field name="name">Product List</field>
+            <field name="name">Product
+                List</field>
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">frusec.product</field>
             <field name="view_mode">kanban,form</field>
