--- a/views/vista_order.xml
+++ b/views/vista_order.xml
@@ -1,118 +1,139 @@
 <odoo>
-  <data>
+	<data>
 
-    <!-- order search view -->
-    
-    <record id="frusec_order_view_search" model="ir.ui.view">
-      <field name="name">frusec.order.search</field>
-      <field name="model">frusec.order</field>
-      <field name="arch" type="xml">
-        <search string="Orders">
-          <field name="order_code" />
-          <field name="client_id" />
-          <field name="datetime" />
-          <field name="note" />
-          <separator />
-          <filter name="state_0" string="Processing" domain="[('state', '=', 'state_0')]" />
-          <filter name="state_1" string="Canceled" domain="[('state', '=', 'state_1')]" />
-          <filter name="state_2" string="Sent" domain="[('state', '=', 'state_2')]" />
-          <filter name="state_3" string="Received" domain="[('state', '=', 'state_3')]" />
-          <filter name="state_4" string="Completed" domain="[('state', '=', 'state_4')]" />
-          <group expand="1" string="Group By">
-            <filter name="client_id" string="Client" context="{'group_by': 'client_id'}" />
-          </group>
-        </search>
-      </field>
-    </record>
+		<!-- order search view -->
 
-    <!-- order tree view -->
+		<record id="frusec_order_view_search" model="ir.ui.view">
+			<field name="name">frusec.order.search</field>
+			<field name="model">frusec.order</field>
+			<field name="arch" type="xml">
+				<search string="Orders">
+					<field name="order_code" />
+					<field name="client_id" />
+					<field name="datetime" />
+					<field name="note" />
+					<separator />
+					<filter name="state_0" string="Processing" domain="[('state', '=', 'state_0')]" />
+					<filter name="state_1" string="Canceled" domain="[('state', '=', 'state_1')]" />
+					<filter name="state_2" string="Sent" domain="[('state', '=', 'state_2')]" />
+					<filter name="state_3" string="Received" domain="[('state', '=', 'state_3')]" />
+					<filter name="state_4" string="Completed" domain="[('state', '=', 'state_4')]" />
+					<group expand="1" string="Group By">
+						<filter name="client_id" string="Client" context="{'group_by': 'client_id'}" />
+					</group>
+				</search>
+			</field>
+		</record>
 
-    <record id="frusec_order_view_tree" model="ir.ui.view">
-      <field name="name">frusec.order.tree</field>
-      <field name="model">frusec.order</field>
-      <field name="arch" type="xml">
-        <tree>
-          <field name="order_code"></field>
-          <field name="client_id"></field>
-          <field name="datetime"></field>
-          <field name="price" widget="monetary"></field>
-          <field name="state"></field>
-        </tree>
-      </field>
-    </record>
+		<!-- order tree view -->
 
-    <!-- order form view -->
+		<record id="frusec_order_view_tree" model="ir.ui.view">
+			<field name="name">frusec.order.tree</field>
+			<field name="model">frusec.order</field>
+			<field name="arch" type="xml">
+				<tree>
+					<field name="order_code" />
+					<field name="client_id" />
+					<field name="datetime" />
+					<field name="price" widget="monetary" sum='Total: '/>
+					<field name="state" />
+				</tree>
+			</field>
+		</record>
 
-    <record id="frusec_order_view_form" model="ir.ui.view">
-      <field name="name">frusec.order.form</field>
-      <field name="model">frusec.order</field>
-      <field name="arch" type="xml">
-        <form>
-          <header>
-            <button id="button_cancel" string="Cancel Order" name="action_cancel" type="object"
-              states="state_0" />
-            <field name="state" widget="statusbar"
-              options="{'clickable': '1'}"
-              statusbar_visible="status_0,status_2,status_3,status_4" />
-          </header>
-          <sheet>
-            <div class='oe_title'>
-              <h1>
-                <field name="order_code" readonly='1'></field>
-              </h1>
-            </div>
-            <group>
-              <group>
-                <field name="client_id"></field>
-                <field name="price" widget="monetary"></field>
-              </group>
-              <group>
-                <field name="datetime"></field>
-                <field name="note"></field>
-              </group>
-            </group>
-          </sheet>
-        </form>
-      </field>
-    </record>
+		<!-- order form view -->
 
-    <!-- order calendar view -->
+		<record id="frusec_order_view_form" model="ir.ui.view">
+			<field name="name">frusec.order.form</field>
+			<field name="model">frusec.order</field>
+			<field name="arch" type="xml">
+				<form>
+					<header>
+						<button id="button_cancel" string="Cancel Order" name="action_cancel" type="object" states="state_0" />
+						<field name="state" widget="statusbar" options="{'clickable': '1'}" statusbar_visible="status_0,status_2,status_3,status_4" />
+					</header>
+					<sheet>
+						<group>
+							<div class="oe_title">
+								<h1>
+									<field name="order_code" readonly="1" />
+								</h1>
+							</div>
+							<group>
+								<field name="client_id" />
+								<field name="price" />
+								<field name="currency_id" invisible="1" />
+							</group>
+							<group>
+								<field name="datetime" />
+								<field name="note" />
+							</group>
+						</group>
+						<notebook>
+							<page name="page_products" string="Products">
+								<field name="product_lines">
+									<tree editable="bottom">
+										<field name="product_id" />
+										<field name="product_qty" />
+										<field name="product_price" widget="monetary"/>
+										<field name="order_id" invisible="1" />
+									</tree>
+									<form>
+										<group>
+											<group>
+												<field name="product_id" />
+											</group>
+											<group>
+												<field name="product_qty" />
+											</group>
+										</group>
+									</form>
+								</field>
+							</page>
+						</notebook>
+					</sheet>
+				</form>
+			</field>
+		</record>
 
-    <record id="frusec_order_view_calendar" model="ir.ui.view">
-      <field name="name">frusec.order.calendar</field>
-      <field name="model">frusec.order</field>
-      <field name="arch" type="xml">
-        <calendar string="Orders Calendar" date_start="datetime" color="order_code" mode="month" quick_add="false">
-          <field name="order_code" />
-          <field name="client_id" />
-          <field name="state" />
-        </calendar>
-      </field>
-    </record>
+		<!-- order calendar view -->
 
-    <!-- actions opening views on models -->
+		<record id="frusec_order_view_calendar" model="ir.ui.view">
+			<field name="name">frusec.order.calendar</field>
+			<field name="model">frusec.order</field>
+			<field name="arch" type="xml">
+				<calendar string="Orders Calendar" date_start="datetime" color="order_code"
+					mode="month" quick_add="false">
+					<field name="order_code" />
+					<field name="client_id" />
+					<field name="state" />
+				</calendar>
+			</field>
+		</record>
 
-    <record model="ir.actions.act_window" id="order_action_window">
-      <field name="name">Order
-        List</field>
-      <field name="type">ir.actions.act_window</field>
-      <field name="res_model">frusec.order</field>
-      <field name="view_mode">tree,form,calendar</field>
-      <field name="help" type="html">
-        <p class="o_view_nocontent_smiling_face">
-          Create a new order!
-        </p>
-      </field>
-    </record>
+		<!-- actions opening views on models -->
 
-    <!-- Top menu item -->
+		<record model="ir.actions.act_window" id="order_action_window">
+			<field name="name">Order
+				List</field>
+			<field name="type">ir.actions.act_window</field>
+			<field name="res_model">frusec.order</field>
+			<field name="view_mode">tree,form,calendar</field>
+			<field name="help" type="html">
+				<p class="o_view_nocontent_smiling_face">
+					Create a new order!
+				</p>
+			</field>
+		</record>
 
-    <menuitem name="Frusec" id="frusec_root" sequence="0" />
+		<!-- Top menu item -->
 
-    <!-- menu categories -->
+		<menuitem name="Frusec" id="frusec_root" sequence="0" />
 
-    <menuitem name="Orders" id="frusec_orders" parent="frusec_root" sequence="10"
-      action="order_action_window" />
+		<!-- menu categories -->
 
-  </data>
+		<menuitem name="Orders" id="frusec_orders" parent="frusec_root" sequence="10"
+			action="order_action_window" />
+
+	</data>
 </odoo>
