--- a/views/vista_client.xml
+++ b/views/vista_client.xml
@@ -31,6 +31,7 @@
                                 <field name="name"></field>
                                 <field name="note"></field>
                             </group>
+                            <separator />
                             <group>
                                 <field name="phone"></field>
                                 <field name="contact"></field>
