--- a/views/vista_order.xml
+++ b/views/vista_order.xml
@@ -36,7 +36,7 @@
 					<field name="client_id" />
 					<field name="datetime" />
 					<field name="state" />
-					<field name="total_price" />
+					<field name="total_price" widget="monetary" />
 				</tree>
 			</field>
 		</record>
@@ -53,17 +53,12 @@
 						<field name="state" widget="statusbar" options="{'clickable': '1'}" statusbar_visible="status_0,status_2,status_3,status_4" />
 					</header>
 					<sheet>
-						<group>
-							<div class="oe_title">
-								<h1>
-									<field name="order_code" readonly="1" />
-								</h1>
-							</div>
+						<group name="oder_code">
 							<group>
 								<field name="client_id" />
-								<field name="product_lines" invisible="1" />
-								<field name="total_price" />
+								<field name="order_lines" invisible="1" />
 								<field name="currency_id" invisible="1" />
+								<field name="total_price" widget="monetary" />
 							</group>
 							<group>
 								<field name="datetime" />
@@ -72,7 +67,7 @@
 						</group>
 						<notebook>
 							<page name="page_products" string="Products">
-								<field name="product_lines">
+								<field name="order_lines">
 									<tree editable="bottom">
 										<field name="product_id" />
 										<field name="product_qty" />
@@ -115,8 +110,7 @@
 		<!-- actions opening views on models -->
 
 		<record model="ir.actions.act_window" id="order_action_window">
-			<field name="name">Order
-				List</field>
+			<field name="name">Order List</field>
 			<field name="type">ir.actions.act_window</field>
 			<field name="res_model">frusec.order</field>
 			<field name="view_mode">tree,form,calendar</field>
