--- a/views/vista_product.xml
+++ b/views/vista_product.xml
@@ -9,7 +9,6 @@
             <field name="arch" type="xml">
                 <search string="Products">
                     <field name="name" />
-                    <field name="price" />
                     <field name="note" />
                     <separator />
                     <group expand="1" string="Group By">
@@ -22,14 +21,13 @@
         <!-- product tree view -->
 
         <record id="frusec_product_view_tree" model="ir.ui.view">
-            <field name="name">
-                frusec.product.tree</field>
+            <field name="name">frusec.product.tree</field>
             <field name="model">frusec.product</field>
             <field name="arch" type="xml">
                 <tree>
                     <field name="name" />
                     <field name="currency_id" invisible="1"/>
-                    <field name="price" />
+                    <field name="price" widget="monetary" />
                 </tree>
             </field>
         </record>
@@ -45,13 +43,13 @@
                         <group>
                             <group>
                                 <field name="name" />
-                                <field name="price" />
-                                <field name="note"/>
+                                <field name="currency_id" />
+                                <field name="price" widget="monetary" />
+                                <field name="note" />
                             </group>
                             <group>
                                 <field name="image" />
                                 <field name="company_id" invisible="1" />
-                                <field name="currency_id" />
                             </group>
                         </group>
                     </sheet>
@@ -101,8 +99,7 @@
         <!-- actions opening views on models -->
 
         <record model="ir.actions.act_window" id="product_action_window">
-            <field name="name">Product
-                List</field>
+            <field name="name">Product List</field>
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">frusec.product</field>
             <field name="view_mode">kanban,form</field>
