--- a/views/vista_client.xml
+++ b/views/vista_client.xml
@@ -1,3 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
+
 <odoo>
     <data>
 
@@ -20,8 +22,9 @@
 
         <!-- client form view -->
 
-        <record id="frusec_order_view_form" model="ir.ui.view">
-            <field name="name">frusec.client.form</field>
+        <record id="frusec_client_view_form" model="ir.ui.view">
+            <field name="name">
+                frusec.client.form</field>
             <field name="model">frusec.client</field>
             <field name="arch" type="xml">
                 <form string='Clients'>
@@ -46,7 +49,8 @@
         <!-- actions opening views on models -->
 
         <record model="ir.actions.act_window" id="client_action_window">
-            <field name="name">Client List</field>
+            <field name="name">Client
+                List</field>
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">frusec.client</field>
             <field name="view_mode">tree,form</field>
