--- a/views/vista_order_line.xml
+++ b/views/vista_order_line.xml
@@ -1,3 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
+
 <odoo>
 	<data>
 
@@ -24,19 +26,19 @@
 				<form string="">
 					<sheet>
 						<group>
-							<group string="">
-								<field name="product_id" />
+							<field name="order_id" invisible="1" />
+							<field name="currency_id" invisible="1" />
+							<field name="product_id" />
+							<group>
 								<group>
-									<field name="currency_id" invisible="1" />
 									<field name="product_price" widget="monetary" />
 								</group>
 								<group>
 									<field name="product_qty" />
 								</group>
 							</group>
-							<group string=" ">
+							<group>
 								<field name="price_subtotal" widget="monetary" />
-								<field name="order_id" invisible="1" />
 							</group>
 						</group>
 					</sheet>
