--- a/views/vista_order.xml
+++ b/views/vista_order.xml
@@ -87,7 +87,7 @@
 										<field name="currency_id" invisible="1" />
 										<field name="product_id" />
 										<field name="product_qty" />
-										<field name="price_subtotal" widget="monetary" sum="1" />
+										<field name="price_subtotal" widget="monetary" />
 									</tree>
 									<form>
 										<field name="currency_id" invisible="1" />
