--- a/views/vista_client.xml
+++ b/views/vista_client.xml
@@ -54,7 +54,7 @@
             <field name="view_mode">tree,form</field>
             <field name="help" type="html">
                 <p class="o_view_nocontent_smiling_face">
-                    ¿Crea tu primer cliente!
+                    ¡Crea tu primer cliente!
                 </p>
             </field>
         </record>
